# icesat2-boreal-stac

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: boreal_agb_202302151676430794_26340.json  collection.json
examples/agb/: collection.json
examples/agb/boreal_agb_2020_202411251732556086_0000004/: boreal_agb_2020_202411251732556086_0000004.json
examples/agb/boreal_agb_2020_202508191755618683_0036023/: boreal_agb_2020_202508191755618683_0036023.json
examples/boreal_ht_2020_202501131736787421_0000004/: boreal_ht_2020_202501131736787421_0000004.json
examples/ht/: collection.json
examples/ht/boreal_ht_2020_202501131736787421_0000004/: boreal_ht_2020_202501131736787421_0000004.json
examples/ht/boreal_ht_2020_202508201755722400_0003543/: boreal_ht_2020_202508201755722400_0003543.json
icesat2_boreal_stac/: __init__.py  cli.py  commands.py  config.py  constants.py  ingest.py  s3.py  services.py  stac.py
scripts/: update-examples
src/stactools/icesat2_boreal/: __init__.py  commands.py  constants.py  daac-tiles.json  s3.py  stac.py
tests/: conftest.py  test_commands.py  test_s3.py  test_stac.py
tests/data/: boreal_ht_2020_202501131736787421_0000003.tif
