[project]
name = "icesat2-boreal-stac"
description = "Create STAC Items for icesat2 boreal"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Emile Tenezakis", email = "emile@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "pystac",
    "rio-stac",
    "fire",
    "fsspec",
    "s3fs",
    "pydantic-settings",
    "pystac[validation]",
]


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "ruff"
]


[project.urls]
"Source" = "https://github.com/MAAP-Project/icesat2-boreal-stac"
"Bug Tracker" = "https://github.com/MAAP-Project/icesat2-boreal-stac/issues"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "icesat2_boreal_stac"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["icesat2_boreal_stac"]
known_third_party = ["pystac"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = true

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]