[project]
name = "icesat2-boreal-stac"
description = "Create STAC Items for icesat2-boreal data products"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Henry Rodman", email = "henry@developmentseed.com"},
    {name = "Emile Tenezakis", email = "emile@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "pystac>=1.12.1",
    "rio-stac",
    "pystac[validation]",
    "boto3",
]

[dependency-groups]
dev = [
    "codespell==2.4.0",
    "ipython>=8.12.3",
    "moto[s3]>=5.0.27",
    "mypy==1.14.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff==0.9.3",
]

[project.urls]
"Source" = "https://github.com/MAAP-Project/icesat2-boreal-stac"
"Bug Tracker" = "https://github.com/MAAP-Project/icesat2-boreal-stac/issues"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "icesat2_boreal_stac"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
no_strict_optional = true

[tool.ruff]
lint.select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

line-length = 88
indent-width = 4

[tool.pytest.ini_options]
addopts = "--cov=icesat2_boreal_stac --cov-report=term-missing --cov-report=xml -vv"
filterwarnings = [
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning"
]
